more replacements of new Integer() and new Double() by the valueOf method; issue #68